--- a/src/TabKeeper.UI.AppWeb/wwwroot/index.html
+++ b/src/TabKeeper.UI.AppWeb/wwwroot/index.html
@@ -11,8 +11,8 @@
     <link href="TabKeeper.UI.AppWeb.styles.css" rel="stylesheet" /> -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="manifest.webmanifest" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="img/icon-512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="img/icon-192.png" />
 </head>
 
 <body>
