--- a/src/TabKeeper.UI.Wasm/wwwroot/index.html
+++ b/src/TabKeeper.UI.Wasm/wwwroot/index.html
@@ -36,6 +36,7 @@
     </div> -->
     <script src="_framework/blazor.webassembly.js"></script>
     <script defer type="text/javascript" src="_content/Ignis.Components.Web/min.js"></script>
+    <script defer type="text/javascript" src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <!-- <script>navigator.serviceWorker.register('service-worker.js');</script> -->
 </body>
 
