--- a/src/TabKeeper.UI.Wasm/wwwroot/index.html
+++ b/src/TabKeeper.UI.Wasm/wwwroot/index.html
@@ -38,7 +38,7 @@
     </div> -->
     <script src="_framework/blazor.webassembly.js"></script>
     <script defer type="text/javascript" src="_content/Ignis.Components.Web/min.js"></script>
-    <script defer type="text/javascript" src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script type="module" src="https://unpkg.com/@lottiefiles/dotlottie-wc@latest/dist/dotlottie-wc.js"></script>
     <!-- <script>navigator.serviceWorker.register('service-worker.js');</script> -->
 </body>
 
