--- a/src/TabKeeper.UI.Wasm/wwwroot/index.html
+++ b/src/TabKeeper.UI.Wasm/wwwroot/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +15,6 @@
     <link rel="apple-touch-icon" sizes="512x512" href="img/icon-512.png" />
     <script src="js/index.js"></script>
 </head>
-
 <body>
     <div id="app">
         <div class="col-span-full row-span-full flex flex-col items-center justify-center gap-2">
@@ -31,15 +29,18 @@
 
     <div id="dialog-outlet"></div>
 
-    <!-- <div id="blazor-error-ui" class="fixed">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div> -->
+    <!-- scripts -->
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <!-- publish -->
+    <!--<script src="_framework/blazor.webassembly.js" autostart="false"></script>-->
+    <!--<script src="js/blazor-decompress.js" type="module"></script>-->
+
+    <!-- libs -->
     <script defer type="text/javascript" src="_content/Ignis.Components.Web/min.js"></script>
     <script type="module" src="https://unpkg.com/@lottiefiles/dotlottie-wc@latest/dist/dotlottie-wc.js"></script>
+
+    <!--service worker-->
     <!-- <script>navigator.serviceWorker.register('service-worker.js');</script> -->
 </body>
-
 </html>
